--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -4,11 +4,12 @@ parameters:
     # environment variables are not available yet.
     # You should not need to change this value.
     env(VARNISH_URL): ''
+    env(APP_VERSION): 0.1.0
 
 api_platform:
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
-    title: Hello API Platform
+    title: Hello Supremo API Platform
     version: 1.0.0
     # Varnish integration, remove if unwanted
     http_cache:
@@ -22,3 +23,21 @@ api_platform:
     # Mercure integration, remove if unwanted
     mercure:
         hub_url: '%env(MERCURE_SUBSCRIBE_URL)%'
+    collection:
+        pagination:
+            # Enable/disable pagination
+            client_enabled: true
+            # Allow user to set how many items per page should be displayed
+            client_items_per_page: true
+            # default limit
+            items_per_page: 20
+            # query value of itemsPerPage, set to "limit" to simplify
+            items_per_page_parameter_name: limit
+    formats:
+        jsonapi:  ['application/vnd.api+json'] # Default
+        jsonld:   ['application/ld+json']
+        json:     ['application/json']
+        xml:      ['application/xml', 'text/xml']
+        yaml:     ['application/x-yaml']
+        csv:      ['text/csv']
+        html:     ['text/html']
