--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,18 +53,19 @@ services:
 
   db:
     # In production, you may want to use a managed database service
-    image: postgres:10-alpine
+    image: mysql:5.7
     environment:
-      - POSTGRES_DB=api
-      - POSTGRES_USER=api-platform
+      - MYSQL_ROOT_PASSWORD=Supremo2993!
+      - MYSQL_DB=supremo-db
+      - MYSQL_USER=root
       # You should definitely change the password in production
-      - POSTGRES_PASSWORD=!ChangeMe!
+      - MYSQL_PASSWORD=Supremo2993!
     volumes:
-      - db-data:/var/lib/postgresql/data:rw
+      - "./.data/mysql:/usr/local/var/mysql"
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/postgresql/data:rw
+      # - ./docker/db/data:/var/lib/mysql/data:rw
     ports:
-      - "5432:5432"
+      - "3306:3306"
 
   mercure:
     # In production, you may want to use the managed version of Mercure, https://mercure.rocks
