--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,17 +53,16 @@ services:
 
   db:
     # In production, you may want to use a managed database service
-    image: mysql:5.7
+    image: mariadb
+    restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=Supremo2993!
-      - MYSQL_DB=supremo-db
+      - MYSQL_DB=supremo_db
       - MYSQL_USER=root
+      - MYSQL_ROOT_PASSWORD=Supremo2993!
       # You should definitely change the password in production
-      - MYSQL_PASSWORD=Supremo2993!
     volumes:
-      - "./.data/mysql:/usr/local/var/mysql"
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
-      # - ./docker/db/data:/var/lib/mysql/data:rw
+       - ./docker/db/data:/var/lib/mysql/data:rw
     ports:
       - "3306:3306"
 
